added more icons

--- a/worldbuilding/magic/crystals.html
+++ b/worldbuilding/magic/crystals.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Crystals</h1>
+        <img src="../../images/Icon_Crystal.png" alt="Icon Crystal">
         
         <p>Crystals or Magic Crystals are crystallizations of magical energy.</p>
         <p>These can be consumed by any mage to gain the respective energy for their own use, whereby the crystal will be transformed back into energy and absorbed by the mage.</p>
