--- a/worldbuilding/magic/spheres/void.html
+++ b/worldbuilding/magic/spheres/void.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Void</h1>
+        <img src="../../images/Icon_Void.png" alt="Icon Void">
         
         <p>Void magic is the result of a genetic mutation (or, rarer, mutilation) of a mage's arcane presence.</p>
         <p>It can thereby not be learned, although similar effects can be achieved using regular arcane magic.</p>
