fixed pathing again

--- a/worldbuilding/magic/focus.html
+++ b/worldbuilding/magic/focus.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Focus</h1>
-        <img src="../../images/Icon_Index.png" alt="Icon Index">
+        <img src="../images/Icon_Index.png" alt="Icon Index">
         
         <p>Focus, or the technique to maintain magic.</p>
         <p>De facto only describing that mages need to concentrate on magic and use up "mental capacity" to keep effects alive.</p>
