--- a/worldbuilding/magic/glyphs.html
+++ b/worldbuilding/magic/glyphs.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Glyphs</h1>
-        <img src="../../images/Icon_Glyph.png" alt="Icon Glyph">
+        <img src="../images/Icon_Glyph.png" alt="Icon Glyph">
         
         <p>Glyphs or their practice, Glyphing is a technique to allow even non-mages to cast magic.</p>
         <p>Mostly known by people as spell scrolls, glyphs can be applied to about any material.</p>
