added divine magic

--- a/worldbuilding/magic/spheres/divine.html
+++ b/worldbuilding/magic/spheres/divine.html
@@ -6,7 +6,66 @@
     <body>
         <h1>Divine Magic</h1>
         <img src="../../images/Icon_Divine.png" alt="Icon Divine">
-        
-        <p> </p>
+
+        <h2>Ignorance</h2>
+        <p>While it is hotly debated if there is a god, multiple or what kind of gods, it is hard to deny the effects divine powers have on the world.</p>
+        <p>The average person will pray and either have their prayer heard or not.</p>
+        <p>Religions and cults will rise and fall as divine interventions ebb and flow.</p>
+        <br>
+        <p>Precise knowledge of the divine sphere is available only to those that study it.</p>
+        <p>If fact, knowledge over the divine might be wholly undesirable.</p>
+
+        <h2>Knowledge</h2>
+        <p>The divine sphere is the 5th and last of the primary spheres.</p>
+        <p>It is both the sphere that people interact with the least and the most.</p>
+        <br>
+        <p>No conventional living being has a presence in the divine plane.</p>
+        <p>It is next to the arcane, and far surpassing it, the most volatile domain.</p>
+        <p>Having a presence in the divine is both hugely detrimental to the structural integrity of a living being, as well as a dark and dangerous potential.</p>
+        <br>
+        <p>The divine sphere can't be used to cast magic in any conventional sense.</p>
+        <p>Divine energy is by far the best source of power, much more than soul. It is however completely unusable due to the functions of the divine.</p>
+
+        <h2>Truth</h2>
+        <p>The divine is everyone's collective subconscious.</p>
+        <p>Every arcane mage will subconsciously create magic forms in the divine.</p>
+        <p>Letting the divine create effects from it by itself.</p>
+        <p>The sphere itself is incredibly susceptible to manipulations from the arcane.</p>
+        <br>
+        <p>A single mage's hopes and wishes, their fears and nightmares, judgement and hate. It all contributes to the divine.</p>
+        <p>But while a single person will not be enough to sway the storm in the divine, a group of people can.</p>
+        <p>A single shared idea, subconscious and unquestioned, followed with zeal. Such an idea will create an effect in the divine.</p>
+        <br>
+        <p>A village performing an age old ritual of sacrifice to bring the rain WILL bring the rain.</p>
+        <p>A prejudice held by many WILL come true.</p>
+        <p>Mass panic WILL make the reason of the fear become reality.</p>
+        <p>A cult leader directing their followers that their god will smite the unworthy, WILL call down the lightning.</p>
+        <br>
+        <p>Magic in the divine requires a strong will, a conviction and many people to believe in it.</p>
+        <p>Yet knowing of this, the working of the divine, makes you unable to contribute.</p>
+        <p>Once you realize how to manipulate the divine, you no longer can.</p>
+        <p>While you might still contribute with truly subconscious and unknown ideas, following rituals will no longer effect the divine for you.</p>
+        <p>You know how it works, you know what you are trying to do, what you want to achieve. And thereby you are denied.</p>
+        <br>
+        <p>Casting in the divine is thereby either impossible, or futile.</p>
+        <p>A divine mage never knows that they are one, to them they are religious followers, god's chosen, the will of the world, prophets.</p>
+        <br>
+        <p>The divine is thus both impractical to use and harmless, but also the most dangerous power to possibly exist.</p>
+        <p>False information, widespread prejudice, mass panics. A belief strong enough, precise enough and widespread enough will become reality.</p>
+        <p>The moons will crash down into the land if only enough people believe it will.</p>
+        <br>
+        <p>Further from such frightening, possible, yet unlikely events are cults.</p>
+        <p>A large enough group of people convinced in an idea, and following it with zeal and conviction, can cause divine effects almost predictably.</p>
+        <p>Those effects will usually be limited, the idea having to be both precise and backed by enough people without question.</p>
+        <p>A direct disbelief from an outsider working against it more than an average cultist might contribute even.</p>
+        <p>Thus a direction is needed, a leader to dictate and direct, telling the will of their god.</p>
+        <p>A cult leader can either be unaware of the workings of the divine, a true zealous follower like any other, thinking they are chosen by their god.</p>
+        <p>Or they can know about the divine, unable to contribute themselves, but directing the followers all the more, knowing how to crystalize their beliefs.</p>
+        <p>Such a leader would not need to follow their gods directions, as they are the god themselves, sometimes even directly to their followers.</p>
+        <p>What they proclaim will happen, because their followers already believe it will.</p>
+        <br>
+        <p>Thus is the spiral of the divine.</p>
+        <p>Belief causes divine effects, which causes stronger belief. "It was not just a belief, it really happened."</p>
+        <p>On the other hand, a wavering belief, dwindling numbers will make divine effects less and less likely, and the belief will disappear.</p>
     </body>
 </html>
