--- a/worldbuilding/miscellaneous/grand_designs.html
+++ b/worldbuilding/miscellaneous/grand_designs.html
@@ -16,6 +16,7 @@
         <p>They say that the designs are all arcane in nature, grand as they are, but flawed all the same.</p>
         <p>Some exceptionally powerful or crafty mages may even nullify them temporarily in an area of their choosing.</p>
         <br>
+        <p>Academics are aware of a possible connection to divine magic, and the possibly disastrous implications that might have.</p>
 
         <h2>The common language</h2>
         <p>The grand design of the common language is both a blessing and a curse.</p>
