addendum divine effects

--- a/worldbuilding/magic/spheres/divine.html
+++ b/worldbuilding/magic/spheres/divine.html
@@ -14,6 +14,7 @@
         <br>
         <p>Precise knowledge of the divine sphere is available only to those that study it.</p>
         <p>If fact, knowledge over the divine might be wholly undesirable.</p>
+        <br>
 
         <h2>Knowledge</h2>
         <p>The divine sphere is the 5th and last of the primary spheres.</p>
@@ -25,6 +26,7 @@
         <br>
         <p>The divine sphere can't be used to cast magic in any conventional sense.</p>
         <p>Divine energy is by far the best source of power, much more than soul. It is however completely unusable due to the functions of the divine.</p>
+        <br>
 
         <h2>Truth</h2>
         <p>The divine is everyone's collective subconscious.</p>
@@ -67,5 +69,17 @@
         <p>Thus is the spiral of the divine.</p>
         <p>Belief causes divine effects, which causes stronger belief. "It was not just a belief, it really happened."</p>
         <p>On the other hand, a wavering belief, dwindling numbers will make divine effects less and less likely, and the belief will disappear.</p>
+        <br>
+
+        <h2>Reality</h2>
+        <p>Divine effects are simple in nature, since even the most unskilled mages contribute.</p>
+        <p>While them happening at all needs a strong conviction, enough people and a concrete, specific effect, that effect must not be too complex.</p>
+        <p>A release of energy as an explosion or lightning is simple enough.</p>
+        <p>Heating, cooling, moving earth, anything that a reasonably skilled novice might cast themselves.</p>
+        <p>As people become more accustomed to any given ritual, experimenting what their god may want, more complex effects become possible.</p>
+        <p>These effects can include otherwise hard to achieve magic, like changing the weather or more illusive things like bringing luck.</p>
+        <p>Academics are very interested in old traditions and the people that follow them.</p>
+        <p>While usually at odds with the local population, "god can't be measured", the study of these traditions is usually instrumental in discovering new way to apply magic.</p>
+        <p>Such 'reverse engineering' has led to some of the most important magic discoveries in history.</p>
     </body>
 </html>
