--- a/worldbuilding/magic/spheres/necromancy.html
+++ b/worldbuilding/magic/spheres/necromancy.html
@@ -8,15 +8,53 @@
         
         <p>Necromancy is a cover term for the magical use of soul and the creation of arcane constructs.</p>
         <p>It is shunned in most societies for it's name-sake ability to "revive the dead".</p>
-        <p>Necromancy is however much more than that and also more complicated than what a common person might know about it.</p>
+        <p>Necromancy is however much more than that, and also more complicated than what a common person might know about it.</p>
         <br>
         <h2>Use of Soul</h2>
-        <p> </p>
+        <p>What will get you branded as a necromancer really quickly is the use of soul.</p>
+        <p>The harvesting of soul is generally forbidden for large enough quantities of soul are only found in living beings.</p>
+        <p>Harvesting it then usually results in the death of the victim, or at least in their life-long suffering.</p>
+        <p>Any ability to interact with soul is therefore seen as a taboo by the general population.</p>
+        <p>Even healers that mend soul and want only good will keep their skills hidden, afraid of prosecution.</p>
         <br>
-        <h2>Shunned practices</h2>
-        <p></p>
+        <p>Soul is so valuable to necromancers because of it's immense energy potential, and it's easy availability if you have no scruples.</p>
+        <p>Necromancers need this energy to perform what they are usually most known for.</p>
         <br>
-        <h2>Allowed practices</h2>
-        <p></p>
+        <h2>Artificial Life</h2>
+        <p>Riving the dead, or so it seems, is the unholy art that sends shivers down the spine of any those that think about it.</p>
+        <p>Necromancers do in fact not create or revive the living.</p>
+        <p>The life they create is more akin to a machine, powered with soul, made from arcane magic.</p>
+        <p>The recently deceased are invaluable for this purpose.</p>
+        <p>It has nothing to do with any unholy energy ascribed to death, but rather because the bodies of the dead are ideal for the construction of arcane life.</p>
+        <p>A dead body has the same structures that it used to connect to it's spirit in life.</p>
+        <p>While quickly decaying, thus a fresh corpse being preferred, these structures can then be used as the baseline for the arcane network that will give the body fake life.</p>
+        <p>A necromancer thus avoids having to "re-invent the wheel" and can work from what supported life before.</p>
+        <br>
+        <p>Soul is therefore used to power this arcane construct, like it would any living being.</p>
+        <p>While it appears ironic and even nonsensical to steal soul from life just to power fake life, a construct like this is much more pliable to orders.</p>
+        <br>
+        <p>While it highly depends on the quality of the construct, in both the necromancer's skill and the material used, these minions are usually very dumb.</p>
+        <p>Only the inexperienced or foolish will actually try to create new life as it was before.</p>
+        <p>Those creations are more often than not stumbling, drooling husks.</p>
+        <p>Zombies and ghouls, feared by the public, but generally harmless, until their reservoir of soul runs dry.</p>
+        <p>Depending on the craftsmanship, a creature like that may just fall over, inert, when it's soul runs out.</p>
+        <p>Or it may decide to find new sources to sustain itself, shambling and with no regards what that soul might still be attached to.</p>
+        <br>
+        <p>No, any necromancer with any self respect will only create full controlled creatures.</p>
+        <p>These creations make take on any kind of shape, often even a gruesome mash of body parts.</p>
+        <p>"Good" necromancers, called white necromancers, will refuse to use corpses and instead work from a clean slate.</p>
+        <p>With this, they create things more akin to machines, animated by the arcane and soul, they can take on even more unconventional shapes.</p>
+        <p>They may range from a walking golem made of stone to hand-held objects with specific purpose.</p>
+        <p>White necromancers reject the title of necromancer, or accept it only begrudgingly, they prefer to compare their creations to glyphing.</p>
+        <p>And while many might disguise it like that, the stigma remains, any those that use the techniques of necromancy are shunned by society at large.</p>
+        <br>
+        <h2>Power Reservoir</h2>
+        <p>While most known, and feared, for their creations of "undeath", necromancers don't limit themselves to this use of soul.</p>
+        <p>In fact, many become necromancers only for potential that soul offers.</p>
+        <p>Such a "freely available" source of great power is sought by many, for any purpose the mind could come up with.</p>
+        <p>These mages will be necromancers secondarily only, their primary focus being in other practices.</p>
+        <p>A fire mage, looking for even greater power, might find themselves drawn into necromancy easily.</p>
+        <p>The raw destruction a fire mage could cause with only comparatively little soul is impressive, and alluring.</p>
+        <p>Other might seek soul for whatever other purpose, all they need is very little remorse.</p>
     </body>
 </html>
