--- a/worldbuilding/miscellaneous/world.html
+++ b/worldbuilding/miscellaneous/world.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>World</h1>
-        <p>It is no known, if the world people inhabit is a ((planet)), a flat surface, or if it even has an end.</p>
+        <p>It is not known, if the world people inhabit is a ((planet)), a flat surface, or if it even has an end.</p>
         <p>People do not act enough on a global scale to exchange these kinds of information.</p>
         <p>Regardless, no-one has found the worlds edge, or traveled from one side and arrived at the other.</p>
         <br>
