added mind magic

--- a/worldbuilding/magic/spheres/mind.html
+++ b/worldbuilding/magic/spheres/mind.html
@@ -6,6 +6,92 @@
     <body>
         <h1>Mind Magic</h1>
         
-        <p>TODO</p>
+        <p>Mainly aligned with the physical sphere, mind magic is the practice of changing the perception and thoughts of individuals.</p>
+        <p>It is a lesser known art and is generally considered dubious if not outright taboo.</p>
+        <p>Most of the fear of mind magic stems from the stories people tell each other.</p>
+        <p>Stories about dark mages mind-controlling all who they meet.</p>
+        <p>Or shady figures subtly planting ideas and desires into the minds of good people.</p>
+        <p>While possible in theory, mind magic is a far more crude art, relying more on distraction and misdirection of the mind.</p>
+        <br>
+
+        <h2>Mind Sight</h2>
+        <p>Mind mages have to ability to see the attention levels of anyone around them.</p>
+        <p>This includes general attentiveness, but also how much attention is paid to the mage, or any other target, specifically.</p>
+        <p>Going a step further, this means that mind mages can also see if a target is asleep, energetic or even their rough emotional state.</p>
+        <br>
+        <p>In contrast to how other disciplines perceive their sphere or it's influence, mind mages have no "organ", no eyes in their sphere to see.</p>
+        <p>Instead the act of using mind sight is an active one, like using any other magic. (Even though with practice it will become like a second nature.)</p>
+        <br>
+        <p>Since mind sight is an active ability, and because mind mages will rarely not scan their surroundings like this, mind mages are keenly aware of the presence of other mind mages.</p>
+        <p>If casting magic in the arcane is creating shapes with a mage's arcane presence, then mind sight is gently caressing a target's mind with the mage's arcane presence.</p>
+        <p>This is usually subtle enough that non-mind mages will not be aware of it, while mind mages themselves cannot go without noticing it.</p>
+        <p> (Mind mages do not directly use their arcane presence for this task, and instead use a proxy that acts much like an arcane presence, an arcane presence made from an arcane presence if you will.)</p>
+        <p> (This proxy is used for subtlety and is not directly perceivable for general mages and is specialized for the purposes of mind magic.)</p>
+        <br>
+        <p>This ability is very important to mind mages because of how their magic works.</p>
+        <p>Since mind magic is about subtle misdirection, and cannot survive direct scrutiny, mages have to be aware how much attention is being paid to them or the target of their magic.</p>
+        <br>
+
+        <h2>Subtlety</h2>
+        <p>Depending on the attention levels of a target, a different approach is needed for mind magic.</p>
+        <p>This can be as simple as focusing your efforts more towards that target and crafting a more subtle, detailed or realistic "illusion".</p>
+        <p>A change that is more in line with what the target might expect is more likely to be accepted and not questioned.</p>
+        <br>
+        <p>Mind mages will often provide illusions for a great number of targets.</p>
+        <p>Each illusion only affects each target themselves and is not visible to, or "in the mind" of others.</p>
+        <p>It thereby a balance act of efficiency and effectiveness when it comes to fooling many targets at once.</p>
+        <p>Within a crowd might be targets that pay less attention and might be fooled by even the blurriest illusion, while others might even try to pay attention to every detail.</p>
+        <p>Managing your resources as a mind mage means learning how much effort on your end is just enough to placate a target and make them accept your illusion.</p>
+        <p>In the case of targets actively trying to see through your illusions, it might be best to not offer them any illusions at all, or make them very subtle and barely different from reality.</p>
+        <p>Experts of mind magic might even find themselves in situations where they might want to create different illusions for different targets.</p>
+        <p>They might even want to create situations in white some targets or not influenced at all, while still keeping their bent reality coherent between all targets.</p>
+        <p>No illusion is more quickly broken than when targets communicate and find disparities in what they see.</p>
+        <br>
+
+        <h2>Effects</h2>
+        <p>What form an illusion can take is entirely up to the mind mage and their skill.</p>
+        <p>Anything that can be perceived can be altered or even omitted.</p>
+        <p>This includes sight, smell, sound, taste, touch, temperature, any perception a mage could have, if the mind mage knows about those spheres and how to "experience" them.</p>
+        <p>Illusion can be broken quickly, if only one sphere of a target object is altered, while targets may still perceive the unaltered spheres the object might exist in.</p>
+        <br>
+        <p>Popular, if difficult effects include:</p>
+        <p>Changing the shape of an object, or the mage themselves, invisibility, even creating completely fabricated objects, just as real as any other.</p>
+        <p>Of course, the illusionary object exists only in the target's mind, and cannot interact with anything else.</p>
+        <p>With enough focus on the illusion and even changing "reality" to account for any interaction the object might have, a target might be fooled in ways they did not think possible.</p>
+        <br>
+        <p>Yet mind magic is a crude art, it requires constant focus on part of the mage, an illusion handed off to a crystal, might persist as an effect, but will soon be broken as targets adapt while the illusion does not.</p>
+        <p>The most convincing illusions might then be the simplest ones, when "reality" is only slightly nudged, targets distracted and misdirected just long enough.</p>
+
+        <h2>Force</h2>
+        <p>It is often best to give up on trying to fool a target that has already once or twice broken your illusion.</p>
+        <p>Any target already guarded will be harder and harder to fool, and even if their mind might accept an illusion as perfectly workable, the person might not.</p>
+        <p>You might hide a secret entrance with the most realistic rock surface, but no illusion stands the test of a target not believing and just stepping through.</p>
+        <p>Even if the rock is as realistic as it can be, even if the target feels the cold impact, even if they feel the pain you create,</p>
+        <p>as they step through the illusion is naught.</p>
+        <br>
+        <p>Forcing an illusion on a target that, no matter what, will not believe in whatever they see is often a lost cause.</p>
+        <p>Attempt failed, exit quickly and try again next time. Or indeed deal with the situation somehow, nothing is a mind mage's worst enemy more than suspicion.</p>
+        <br>
+        <p>There are however ways to make use of the more "brute force" ways of mind magic.</p>
+        <p>You don't have to care if a target believes your illusion, if it is still trapped in it.</p>
+        <p>Remove all perception from a target, no sight, no sound, no smell, no taste, no touch, no nothing.</p>
+        <p>An empty white space, a stumbling, then falling target.</p>
+        <p>With enough power behind the effect, any one target can effectively be paralyzed and put into a coma, as long as the effect lasts.</p>
+        <p>While powerful, and feared, this is usually only a last resort of any mind mage.</p>
+        <p>Perfectly imprisoning a target in their own mind like this takes a mind mage's full attention and might make them just as unable to act as their target.</p>
+        <p>And yet, they have to exert themselves, while the target might even be able to rest, if they know what's happening to them.</p>
+        <br>
+        <p>While being limited by their inability to actually affect reality mind mages often dabble in other disciplines for combat, such as fire magic.</p>
+        <p>This is however not strictly necessary.</p>
+        <p>Of of the perceptions a mind mage can influence is the body's ability to feel pain.</p>
+        <p>This is often made use of by the most sadistic of mind mages, even though it is technically a more humane way of combat, if applied correctly.</p>
+        <p>It is indeed possible to cause enough pain to permanently scar a target's mind, so much so that it might last even after the actual effect.</p>
+        <p>This is however heavily frowned upon by most teachings of mind magic.</p>
+        <p>Instead it is made use of as a way to conduct combat and incapacitate targets without causing actual or permanent damage.</p>
+        <p>Though targets might strongly disagree and some might even want death more than another encounter with a mind mage in combat.</p>
+        <br>
+        <p>The disadvantage of this combat art is though, that it relies entirely on the pain tolerance of any given target.</p>
+        <p>A target that is used to pain and has steeled itself against it might even be completely immune to a mind mage's attacks.</p>
+
     </body>
 </html>
