edited landing page for some more info

--- a/worldbuilding/index.html
+++ b/worldbuilding/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Index</h1>
+        <p>Welcome to the worldbuilding project I've been working on for years now.</p>
+        <p>If you are new to all of this, I'd recommend going to the magic section, as this is mostly based around a "physics-based" magic system I created.</p>
 
         <br>
         <h2>Notes:</h2>
