edited landing page for more info

--- a/worldbuilding/magic/glyphs.html
+++ b/worldbuilding/magic/glyphs.html
@@ -44,11 +44,16 @@
         <p>The advantage here is that it allows mages to cast magic they usually wouldn't be able to, given they are able to cast magic of that sphere at all.</p>
         <p>It also allows for more complex magic that has to changed for a given situation (such as a specific illusion on a specific target).</p>
         <br>
+
         <h2>Light Glyphs</h2>
         <p>Glyphs can become almost fully reusable using "proper" light magic.</p>
         <p>This form of light magic is only known by few and a closely guarded secret, but using it, you can make glyphs that rely entirely on it.</p>
         <p>Glyphs like this only provide the form the magic should take, the energy comes from the caster in form of precise light.</p>
         <p>This reduces the abuse the material takes and allows the caster to change the magic based on the properties of the light used, instead of just fueling the magic as with regular glyphs.</p>
         <p>Light glyphs are highly complex and usually custom-made by the user themselves, oftentimes also modular in their construction.</p>
+        <br>
+
+        <h2>Speed Glyphing</h2>
+        <p>TODO</p>
     </body>
 </html>
