--- a/worldbuilding/magic/overview.html
+++ b/worldbuilding/magic/overview.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>Magic</h1>
-        <p>Magic underlies rules, just like physics do in real life.</p>
-        <p>It is separated into spheres (or domains), not just as a scholarly distinction, but by being literally different dimensions coexisting.</p>
+        <p>Magic underlies rules, just like physics do in ((real life)).</p>
+        <p>It is separated into spheres (or domains), not just as a scholarly distinction, but by literally being different dimensions coexisting.</p>
         <p>When talking about the dimension of a certain sphere, it may also be called a plane (of existence).</p>
         <br>
         <p>A typical person will have a body comprised of a physical, spirit and soul presence, while only being able to see physical with their eyes.</p>
@@ -35,7 +35,7 @@
         
         <p>Secondary spheres are comprised of a mix of multiple primary spheres. They do not have sub-dimensions and cannot create elementals.</p>
         <p>Strictly speaking, secondary spheres are more akin to conventions in magic use, rather than their own entities.</p>
-        <p>The common populous might call beings of multiple spheres "elementals" as long as none of those spheres include physical, due to a lack of their magical understanding or formal education.</p>
+        <p>The common populous might call beings of multiple spheres "elementals", due to a lack of their magical understanding or formal education.</p>
         <p>A fire "elemental" might be incorrectly called an elemental, because they seem to be compromised of only fire, yet they exist both in the Physical and the Arcane.</p>
         <br>
         <p>These spheres exist only as categories for the common folk and only vaguely describe their sphere-composition.</p>
