--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Weissfeuer's Grumpy Gnoll Corner</title>
+        <title>Khazu's Grumpy Gnoll Corner</title>
     </head>
     <body>
-        <h1>Weissfeuer's Grumpy Gnoll Corner</h1>
+        <h1>Khazu's Grumpy Gnoll Corner</h1>
+
         <h2>Projects</h2>
         <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
 		<br>
-		<p><a href="https://github.com/Weissfeuer/DistanceLeveledMonsters">DistanceLeveledMonsters</a></p>
-		<p>Minecraft 1.13 plugin to scale monster stats based on distance from spawn.</p>
-		<br>
-		<p><a href="https://www.dropbox.com/sh/fw9etiz5qmfnt2v/AAC3CvPysUbKSw9fcKObP-0Ga?dl=0">Doodles Archive</a></p>
+		<p><a href="https://t.me/KhazusDumbDoodles"> - Telegram Doodles Channel - </a></p>
+		<p>The latest stuff I doodle, you may ask me any time if you want a doodle, doesn't cost anything.</p>
+        <p><a href="https://www.dropbox.com/sh/fw9etiz5qmfnt2v/AAC3CvPysUbKSw9fcKObP-0Ga?dl=0">Doodles Archive</a></p>
 		<p>Dumb doodles of people, read the txt in Dropbox for more info.</p>
 		<br>
 		<p>--- --- ---</p>
         <h2>Tutorials</h2>
 		<p><a href="https://t.me/HowToMakeTelegramGifs">https://t.me/HowToMakeTelegramGifs</a></p>
 		<p>Tutorial on how to make high quality Telegram gifs.</p>
-		<br>
         <p><a href="https://t.me/HowToExport3DModels">https://t.me/HowToExport3DModels</a></p>
 		<p>Tutorial on how to export 3D models from games for use with VRChat or 3D printing.</p>
-
 		<p>--- --- ---</p>
         <h2>How to contact me</h2>
         <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
-		<br>
 		<p><a href="https://www.weasyl.com/~weissfeuer">https://www.weasyl.com/~weissfeuer</a></p>
         <p>All the art I own in one place, I guess. Please be respectful.</p>
-		<br>
         <p><a href="https://www.ko-fi.com/weissfeuer">https://www.ko-fi.com/weissfeuer</a></p>
         <p>If you want to donate stuff to me.</p>
+        <p>--- --- ---</p>
+        <br>
+        <h2>Archive</h2>
+        <p><a href="https://github.com/Weissfeuer/DistanceLeveledMonsters">DistanceLeveledMonsters</a></p>
+		<p>Minecraft 1.13 plugin to scale monster stats based on distance from spawn.</p>
     </body>
 </html>
