--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
 		<br>
-		<p><a href="https://t.me/KhazusDumbDoodles"> - Telegram Doodles Channel - </a></p>
+		<p><a href="https://t.me/KhDoodles">Telegram Doodles Channel</a></p>
 		<p>The latest stuff I doodle, you may ask me any time if you want a doodle, doesn't cost anything.</p>
         <p><a href="https://www.dropbox.com/sh/fw9etiz5qmfnt2v/AAC3CvPysUbKSw9fcKObP-0Ga?dl=0">Doodles Archive</a></p>
 		<p>Dumb doodles of people, read the txt in Dropbox for more info.</p>
@@ -18,9 +18,9 @@
 		<p>--- --- ---</p>
         <h2>Tutorials</h2>
 		<p><a href="https://t.me/HowToMakeTelegramGifs">https://t.me/HowToMakeTelegramGifs</a></p>
-		<p>Tutorial on how to make high quality Telegram gifs.</p>
+		<p>How to make high quality Telegram gifs.</p>
         <p><a href="https://t.me/HowToExport3DModels">https://t.me/HowToExport3DModels</a></p>
-		<p>Tutorial on how to export 3D models from games for use with VRChat or 3D printing.</p>
+		<p>How to export 3D models from games for use with VRChat or 3D printing.</p>
 		<p>--- --- ---</p>
         <h2>How to contact me</h2>
         <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
