Old changes + more about crystals

--- a/worldbuilding/characters/overview.html
+++ b/worldbuilding/characters/overview.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Characters</h1>
+        <p>While some information might be gleaned from this, this section is mostly only notes for what I had in mind for each character.</p>
+        <br>
         
         <p><a href="./gnoll_spirit-shaman.html">Gnoll Spirit-Shaman</a></p>
         <p><a href="./opossum_illusionist.html">Opossum Illusionist</a></p>
