--- a/worldbuilding/magic/crystals.html
+++ b/worldbuilding/magic/crystals.html
@@ -15,12 +15,15 @@
         <p>Crystals will decay over time, based on the energies in their environment.</p>
         <p>Low energy environments accelerate decay and high energy environment can even cause the crystal to grow (naturally occurring crystals).</p>
         <p>To a small percentage, the crystal will always exchange energy with the environment and thereby become impure with the environment's energy. Specific storage procedures are recommended if this is to be avoided.</p>
+        <p>Pure arcane crystals for example are very unstable and tend to react with other energies in the environment.</p>
+        <P>A pure-arcane mage will therefor quickly learn to just purify the energy when absorbing the crystal, instead of trying to keep the crystal itself pure.</p>
         <br>
         <p>Crystals can contain any kind of magical energy as long as the energy can be crystallized (such as arcane, spirit, soul or even force).</p>
         <p>Usually crystals are not pure, as in they contain energy of multiple different spheres, this is normal as hardly any environment has purely one type of energy.</p>
         <p>Most people consider a crystal "pure" if it contains the same mixture of energies as their specific sub-domain (like fire magic being mostly arcane with some physical energy).</p>
         <p>However, crystals can be refined to have only one type of energy if it is necessary.</p>
         <p>Usually any mage will just not (be able to) absorb any unwanted kinds of energy the crystal might also contain.</p>
+        <p>Many traditions will also prefer crystals to have a specific kind of internal structure, either to make the crystal more stable or easier to draw energy from, for that specific tradition.</p>
         <br>
         <p>Crystals can be created by any mage able to cast whatever energy they want to crystallize.</p>
         <p>This process comes naturally to many races, mostly in inefficient forms and can be learned by everyone as long as they can cast magic.</p>
@@ -31,5 +34,7 @@
         <br>
         <p>Special care has to be taken when storing a lot of crystals in close proximity.</p>
         <p>Depending on the baseline stability of the energy, crystals might naturally try to fuse with each other or react and free their stored energy into the environment.</p>
+        <p>Especially reactive crystals can also be repurposed as makeshift bombs, by scratching or damaging the structure of the crystal, and then throwing it.</p>
+        <p>While it is frowned upon, pure arcane crystals can easily be used in such a way, and maim or cripple the arcane presence of any mage hit by the crystal collapse.</p>
     </body>
 </html>
