--- a/worldbuilding/races/overview.html
+++ b/worldbuilding/races/overview.html
@@ -6,9 +6,10 @@
     <body>
         <h1>Races</h1>
         
-        <p>Currently ToDo, a bit of information can be gathered from some character pages for now.</p>
+        <p>Information about unavailable races might be found under characters.</p>
         <br>
         <p><a href="./gnoll.html">Gnoll</a></p>
+        <br>
         <p>> ~Opossum</p>
         <p>> ~Otter</p>
         <p>> ~Wolf</p>
