--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<p>How to export 3D models from games for use with VRChat or 3D printing.</p>
 		<p>--- --- ---</p>
         <h2>How to contact me</h2>
+        <p>Generally, you can find me on any platform under "Weissfeuer".</p>
         <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
 		<p><a href="https://www.weasyl.com/~weissfeuer">https://www.weasyl.com/~weissfeuer</a></p>
